package ru.vsu.ppa.simplecode;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class SimpleCodeApplication {

	public static void main(String[] args) {
		SpringApplication.run(SimpleCodeApplication.class, args);
	}

}
