package ru.vsu.ppa.simplecode.model;

import lombok.Data;

@Data
public class TestGenerator {
    private String customCode;
}
